projects/vb6parse/snapshots/parsers/cst/loop_statements/while_triple_nested.snap
---
source: projects/vb6parse/src/parsers/cst/loop_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WhileStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: a
                    - kind: Whitespace
                      text: " "
                    - kind: LessThanOperator
                      text: "<"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "10"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: WhileStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: WhileKeyword
                          text: While
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: b
                            - kind: Whitespace
                              text: " "
                            - kind: LessThanOperator
                              text: "<"
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "5"
                        - kind: Newline
                          text: "\n"
                        - kind: StatementList
                          children:
                            - kind: WhileStatement
                              children:
                                - kind: Whitespace
                                  text: "            "
                                - kind: WhileKeyword
                                  text: While
                                - kind: Whitespace
                                  text: " "
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: c
                                    - kind: Whitespace
                                      text: " "
                                    - kind: LessThanOperator
                                      text: "<"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "3"
                                - kind: Newline
                                  text: "\n"
                                - kind: StatementList
                                  children:
                                    - kind: Whitespace
                                      text: "                "
                                    - kind: AssignmentStatement
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: c
                                        - kind: Whitespace
                                          text: " "
                                        - kind: EqualityOperator
                                          text: "="
                                        - kind: Whitespace
                                          text: " "
                                        - kind: BinaryExpression
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: c
                                            - kind: Whitespace
                                              text: " "
                                            - kind: AdditionOperator
                                              text: +
                                            - kind: Whitespace
                                              text: " "
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: IntegerLiteral
                                                  text: "1"
                                        - kind: Newline
                                          text: "\n"
                                    - kind: Whitespace
                                      text: "            "
                                - kind: WendKeyword
                                  text: Wend
                                - kind: Newline
                                  text: "\n"
                            - kind: Whitespace
                              text: "            "
                            - kind: AssignmentStatement
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: b
                                - kind: Whitespace
                                  text: " "
                                - kind: EqualityOperator
                                  text: "="
                                - kind: Whitespace
                                  text: " "
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: b
                                    - kind: Whitespace
                                      text: " "
                                    - kind: AdditionOperator
                                      text: +
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "1"
                                - kind: Newline
                                  text: "\n"
                            - kind: Whitespace
                              text: "        "
                        - kind: WendKeyword
                          text: Wend
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: a
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: a
                            - kind: Whitespace
                              text: " "
                            - kind: AdditionOperator
                              text: +
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: WendKeyword
                  text: Wend
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
